<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteMyWayActivity">

    <Button
        android:id="@+id/btnToApp"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:text="@string/btnTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="385dp"
        android:layout_height="71dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#A71DC8"
        android:textSize="49sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="341dp"
        android:layout_height="144dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textColor="#B279D9"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Switch
        android:id="@+id/switchLocation"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:text="@string/location_permission"
        android:textStyle="italic"
        android:textColor="#B279D9"
        android:textSize="17sp"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>