<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="12dp"
        android:paddingBottom="8dp"
        android:text="@string/twoje_miejsca"
        android:textAlignment="center"
        android:textSize="21sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/quantum_bluegrey50"
        android:divider="@android:color/background_light"
        android:dividerHeight="0.5dp"
        android:paddingBottom="8dp"
        />

    <TextView
        android:id="@+id/tvClickOnElementInfo"
        android:text="@string/del_point_desc"
        android:textColor="@color/quantum_grey500"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:paddingTop="8dp"
        android:padding="16dp"/>

    <!-- Przycisk do usuwania markerów -->
    <Button
        android:id="@+id/btnRemoveMarker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usun_marker"
        android:radius="6dp"
        android:backgroundTint="@color/quantum_bluegrey600"
        android:textColor="@android:color/white"
        android:padding="12dp"/>

</LinearLayout>
