<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="12dp"
>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/title_list_fragment"
        android:textAlignment="center"
        android:textSize="21sp" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/quantum_bluegrey50"
        android:divider="@android:color/background_light"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resultTitle"
        android:textSize="19sp"
        android:padding="16dp"
        android:textAlignment="center"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/tvResultDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=" "
        android:background="@color/quantum_bluegrey100"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="16dp"
        android:visibility="visible"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <Button
            android:id="@+id/btnShowMap"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/button_selector"
            android:padding="12dp"
            android:radius="6dp"
            android:text="@string/pokaz_trase_na_mapie"
            android:textColor="@android:color/white"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnEditPoints"
            android:layout_width="182dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_margin="4dp"
            android:backgroundTint="@color/quantum_bluegrey600"
            android:padding="12dp"
            android:radius="6dp"
            android:text="@string/edytuj_punkty"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </androidx.cardview.widget.CardView>

</LinearLayout>
